[gd_scene load_steps=15 format=3 uid="uid://dnmtht1dnkjq4"]

[ext_resource type="Texture2D" uid="uid://bk878ng0fe03k" path="res://assets/guis/options_background.png" id="1_2r0b8"]
[ext_resource type="Script" path="res://scenes/guis/options_menu.gd" id="1_ripaf"]
[ext_resource type="LabelSettings" uid="uid://cv8k45k1mjna6" path="res://scenes/guis/default_label.tres" id="2_ichmo"]
[ext_resource type="Texture2D" uid="uid://b7ahvbfgbri1j" path="res://assets/guis/musicOff.png" id="3_ofmhf"]
[ext_resource type="Texture2D" uid="uid://bapmv7bpp5um1" path="res://assets/guis/audioOff.png" id="4_t4pj4"]
[ext_resource type="Texture2D" uid="uid://d23aqepba7hu3" path="res://assets/guis/musicOff_outline.png" id="5_qc1fr"]
[ext_resource type="LabelSettings" uid="uid://b5wbsy6h22dyo" path="res://scenes/guis/heading.tres" id="5_v5bq0"]
[ext_resource type="Texture2D" uid="uid://bamv1ln8u6tjl" path="res://assets/guis/accept_normal.png" id="8_ueubc"]
[ext_resource type="Texture2D" uid="uid://bun0qovo3v1ju" path="res://assets/guis/musicOn.png" id="9_kpwmf"]
[ext_resource type="Texture2D" uid="uid://bydiyilvuvvwf" path="res://assets/guis/accept_hover.png" id="9_mngjy"]
[ext_resource type="Texture2D" uid="uid://5vv25ricw5pg" path="res://assets/guis/musicOn_outline.png" id="10_35vbx"]
[ext_resource type="Texture2D" uid="uid://cc88qynb5fthf" path="res://assets/guis/audioOff_outline.png" id="12_c3051"]
[ext_resource type="Texture2D" uid="uid://dy4qudd8xuk4" path="res://assets/guis/audioOn.png" id="13_bxscp"]
[ext_resource type="Texture2D" uid="uid://dlvynqm7yb6no" path="res://assets/guis/audioOn_outline.png" id="14_14oed"]

[node name="Options" type="CanvasLayer"]
script = ExtResource("1_ripaf")

[node name="OptionsMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="OptionsContainer" type="MarginContainer" parent="OptionsMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="OptionsMenu/OptionsContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("1_2r0b8")
stretch_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="OptionsMenu/OptionsContainer"]
layout_mode = 2
theme_override_constants/margin_top = 160
theme_override_constants/margin_bottom = 160

[node name="Header" type="Label" parent="OptionsMenu/OptionsContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Options"
label_settings = ExtResource("5_v5bq0")
horizontal_alignment = 1

[node name="ButtonsContainer" type="CenterContainer" parent="OptionsMenu/OptionsContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="AcceptButton" type="TextureButton" parent="OptionsMenu/OptionsContainer/MarginContainer/ButtonsContainer"]
process_mode = 3
layout_mode = 2
texture_normal = ExtResource("8_ueubc")
texture_pressed = ExtResource("9_mngjy")
texture_hover = ExtResource("9_mngjy")
texture_focused = ExtResource("9_mngjy")

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsMenu/OptionsContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 128

[node name="SoundOptions" type="HBoxContainer" parent="OptionsMenu/OptionsContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Labels" type="MarginContainer" parent="OptionsMenu/OptionsContainer/VBoxContainer/SoundOptions"]
layout_mode = 2
theme_override_constants/margin_top = 24

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsMenu/OptionsContainer/VBoxContainer/SoundOptions/Labels"]
layout_mode = 2
theme_override_constants/separation = 48

[node name="Music" type="Label" parent="OptionsMenu/OptionsContainer/VBoxContainer/SoundOptions/Labels/VBoxContainer"]
layout_mode = 2
text = "Music:"
label_settings = ExtResource("2_ichmo")
horizontal_alignment = 2

[node name="SoundEffects" type="Label" parent="OptionsMenu/OptionsContainer/VBoxContainer/SoundOptions/Labels/VBoxContainer"]
layout_mode = 2
text = "Sound Effects:"
label_settings = ExtResource("2_ichmo")
horizontal_alignment = 2

[node name="Icons" type="VBoxContainer" parent="OptionsMenu/OptionsContainer/VBoxContainer/SoundOptions"]
layout_mode = 2

[node name="MusicOffButton" type="TextureButton" parent="OptionsMenu/OptionsContainer/VBoxContainer/SoundOptions/Icons"]
visible = false
layout_mode = 2
texture_normal = ExtResource("3_ofmhf")
texture_hover = ExtResource("5_qc1fr")
texture_focused = ExtResource("5_qc1fr")

[node name="MusicOnButton" type="TextureButton" parent="OptionsMenu/OptionsContainer/VBoxContainer/SoundOptions/Icons"]
layout_mode = 2
texture_normal = ExtResource("9_kpwmf")
texture_hover = ExtResource("10_35vbx")
texture_focused = ExtResource("10_35vbx")

[node name="SoundEffectsOffButton" type="TextureButton" parent="OptionsMenu/OptionsContainer/VBoxContainer/SoundOptions/Icons"]
visible = false
layout_mode = 2
texture_normal = ExtResource("4_t4pj4")
texture_hover = ExtResource("12_c3051")
texture_focused = ExtResource("12_c3051")

[node name="SoundEffectsOnButton" type="TextureButton" parent="OptionsMenu/OptionsContainer/VBoxContainer/SoundOptions/Icons"]
layout_mode = 2
texture_normal = ExtResource("13_bxscp")
texture_hover = ExtResource("14_14oed")
texture_focused = ExtResource("14_14oed")

[connection signal="pressed" from="OptionsMenu/OptionsContainer/MarginContainer/ButtonsContainer/AcceptButton" to="." method="_on_accept_button_pressed"]
[connection signal="pressed" from="OptionsMenu/OptionsContainer/VBoxContainer/SoundOptions/Icons/MusicOffButton" to="." method="_on_music_button_pressed"]
[connection signal="pressed" from="OptionsMenu/OptionsContainer/VBoxContainer/SoundOptions/Icons/MusicOnButton" to="." method="_on_music_button_pressed"]
[connection signal="pressed" from="OptionsMenu/OptionsContainer/VBoxContainer/SoundOptions/Icons/SoundEffectsOffButton" to="." method="_on_sound_effects_button_pressed"]
[connection signal="pressed" from="OptionsMenu/OptionsContainer/VBoxContainer/SoundOptions/Icons/SoundEffectsOnButton" to="." method="_on_sound_effects_button_pressed"]
